syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";

option go_package = "user/api/user/v1;v1";


service User {

  rpc Register (RegisterRequest) returns (RegisterReply){

  }
  rpc Login (LoginRequest) returns (LoginReply) {

  }
  rpc UserDetail (UserDetailRequest) returns (UserDetailReply){

  }

}

message RegisterRequest {
  string name = 1;
  string password = 2;
  string telephone = 3;
  string email = 4;
  string image = 5;
}

message  RegisterReply {

}

message LoginRequest {
  string email = 1;
  string telephone = 2;
  string password = 3;
}

message LoginReply {
  string name = 1;
  string image = 2;
  string token = 3;
}

message UserDetailRequest {
  uint64 user_id = 1;
}

message UserDetailReply {
  string name = 1;
  string telephone = 2;
  string email = 3;
  string image = 4;
}

